<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FAFAFA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="#004DE6"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:id="@+id/navHome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/home"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/navDetails"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/details"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/navReport"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/report"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/navHelp"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="@string/help_icon"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details_title"
        android:textSize="21sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:gravity="center"
        android:padding="25dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/txtDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:textSize="16sp"
            android:textColor="#000000" />

    </ScrollView>

</LinearLayout>